--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,7 +12,9 @@
     "com.unity.ide.rider": "3.0.18",
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.memoryprofiler": "0.7.1-preview.1",
     "com.unity.mobile.android-logcat": "1.3.2",
+    "com.unity.profiling.core": "1.0.2",
     "com.unity.purchasing": "4.6.0",
     "com.unity.render-pipelines.universal": "12.1.10",
     "com.unity.shadergraph": "12.1.10",
